--- a/drivers/hid/Kconfig
+++ b/drivers/hid/Kconfig
@@ -142,6 +142,12 @@ config DRAGONRISE_FF
 	Say Y here if you want to enable force feedback support for DragonRise Inc.
 	game controllers.
 
+config HID_EATON
+	tristate "Eaton X-Comfort CI interface"
+	depends on USB_HID
+	---help---
+	Support for the Eaton USB interface to the X-Comfort home automation bus.
+
 config HID_EGALAX
 	tristate "eGalax multi-touch panel"
 	depends on USB_HID
