--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -113,4 +113,9 @@ source "drivers/staging/Kconfig"
 source "drivers/platform/Kconfig"
 
 source "drivers/mxc/Kconfig"
+
+if ARCH_MXC
+source "drivers/blt/Kconfig"
+endif
+
 endmenu
