update to Freescale r10 Android release; includes Android drivers, some fixes from other branches (corresponds to rev cf6d3f5d5f51760ce8eaf793f22469ae6b0f190e in fsl android branch, ENGR00122167-4 V4L2 output: changes for TVE-VGA support.)

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -358,6 +358,14 @@ config MXS_PERSISTENT
 	depends on ARCH_MXS
 	default y
 
+config ANDROID_PMEM
+	bool "Android pmem allocator"
+	default n
+
+config UID_STAT
+	bool "UID based statistics tracking exported to /proc/uid_stat"
+	default n
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
