0702-RTC-Add-alarm-driver-and-it-s-interface-which-use-h.patch

--- a/drivers/rtc/Makefile
+++ b/drivers/rtc/Makefile
@@ -100,4 +100,6 @@ obj-$(CONFIG_RTC_DRV_IMXDI)	+= rtc-imxdi.o
 obj-$(CONFIG_RTC_MC13892)		+= rtc-mc13892.o
 obj-$(CONFIG_RTC_DRV_MXS)	+= rtc-mxs.o
 obj-$(CONFIG_RTC_DRV_DA9052)  += rtc-da9052.o
+obj-$(CONFIG_RTC_INTF_ALARM) += alarm.o
+obj-$(CONFIG_RTC_INTF_ALARM_DEV) += alarm-dev.o
 
