add support for the Bluetechnix IO board (disables CSPI1 !)

--- a/drivers/blt/Kconfig
+++ b/drivers/blt/Kconfig
@@ -5,6 +5,7 @@ if ARCH_MXC
 menu "SBC-i.MX51 support drivers"
 source "drivers/blt/gps/Kconfig"
 source "drivers/blt/gsm/Kconfig"
+source "drivers/blt/io/Kconfig"
 endmenu
 
 endif
